# onnxruntime-mlx

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md
.github/: dependabot.yml
.github/workflows/: bench.yml  ci.yml  conformance.yml  publish.yml
bench/: README.md  bench.py  cases.py  compare.py
cmake/: FindONNXRuntime.cmake  metal_kernels.inc.in
docs/: DESIGN.md  METAL_TRACING.md  MLX_EVALUATION.md  OP_ARCHITECTURE.md
examples/traces/: README.md  ep-events-attention.json  ep-events-conv.json  fcn-resnet50-segmentation.json  gqa-attention-fused.json  matmulnbits-fast-vs-composed.json  perch-audio-encoder.json  qwen2.5-0.5b-decode.json  resnet18-classifier.json  yolov8n-detector.json
include/onnxruntime_mps/: metal_ep.h  version.h
python/: CMakeLists.txt  README.md  hatch_build.py  pyproject.toml
python/cmake/: fixup_bundle.cmake.in
python/src/: _core.cpp
python/src/onnxruntime_mlx/: __init__.py  _core.pyi
rust/: .gitignore  Cargo.toml  README.md  build.rs  stress_add.py  stress_wave2.py  trace_fine_probe.py
rust/src/: compiled.rs  compiled_general.rs  engine.rs  ep.rs  factory.rs  lib.rs  mlx.rs  registry.rs  sys.rs  trace.rs
rust/src/ops/: attention.rs  controlflow.rs  conv.rs  elementwise.rs  math.rs  matmul.rs  misc.rs  mod.rs  norm.rs  quant.rs  random.rs  recurrent.rs  reduction.rs  shape.rs  signal.rs  ssm.rs  stragglers.rs  vision.rs
spike/mlx/: CMakeLists.txt  README.md  bench_matmulnbits.mm  mlx_probe.c
src/ep/: allocator.h  data_transfer.cc  data_transfer.h  entry.cc  ep.cc  ep.h  ep_factory.cc  ep_factory.h  metal_context.h  metal_context.mm  mlx_backend.cc  mlx_backend.h  mlx_engine.h  op_claim.h  op_registry.cc  op_registry.h  plugin_ep_utils.h
src/ep/ops/: activations2.cc  attention.cc  attention_ext.cc  bitwise.cc  controlflow.cc  conv.cc  elementwise.cc  math.cc  matmul.cc  misc2.cc  norm.cc  norm_ext.cc  normpool.cc  quant.cc  quant2.cc  quantize.cc  randommisc.cc  recurrent.cc  reduction.cc  reduction2.cc  shape.cc  shape2.cc  signal.cc  ssm_misc.cc  trig.cc  vision2b.cc
src/kernels/: data_movement.metal  elementwise.metal  gather_block_quantized.metal  matmulnbits.metal  norm.metal  rope.metal  softmax.metal
tests/: README.md  run_with_metal_validation.sh
tests/backend/: test_onnx_backend.py
tests/conformance/: README.md  RESULTS.md  claimed_ops.txt  mlx_runtime_wrapper.py  results.csv  run_conformance.sh  test_conformance.py
tests/e2e/: e2e_test.cc  leak_test.mm  prepare_prompt.py
tests/kernels/: kernel_test.cc  mariette_kernel_test.cc  ort_reference_test.py
tests/ops/: _models.py  conftest.py  mlx_cf_probe_2026-07-14_10-12-58_328.json  mlx_cf_probe_2026-07-14_10-12-58_334.json  mlx_op_test.py  test_attention_ext.py  test_conv.py  test_elementwise_ops.py  test_exp_logic.py  test_exp_math.py  test_exp_normpool.py  test_exp_quant.py  test_exp_random.py  test_exp_shape.py  test_exp_signal.py  test_exp_vision2.py  test_gaps_compute.py  test_gaps_math.py  test_gaps_shape.py  test_gqa11.py  test_math.py  test_matmulnbits_asym.py  test_mlx_ops.py  test_norm_ext.py  test_paged_attention.py  test_reduction.py  test_rem_controlflow.py  test_rem_misc2.py  test_rem_quant2.py  test_rem_recurrent.py  test_rem_vision2b.py  test_resize.py  test_shape.py  test_ssm_quant.py
